# habapp-rule-test-demo

./: .gitignore  README.md  config.yml  logging.yml  pyproject.toml  run_tests.py
lib/: simple_rule.py
rules/: create_rule_instances.py  simple_rule.py
tests/: test_simple_rule.py
tests/helper/: base_test.py  extended_rule_runner.py  rule_runner.py
